# hs-dddf

./: CHANGELOG.md  README.md  hs-dddf.cabal
app/: Main.hs
src/: Dddf.hs
src/Dddf/: Internal.hs
src/Dddf/Internal/: TypeUtil.hs
test/: Main.hs
