cabal-version:      2.4
name:               hs-dddf
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yutaka Nishimura
maintainer:         ytk.nishimura@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Dddf
    Dddf.Internal

  -- other-modules:
  -- build-depends:
  build-depends:
    , base        ^>=4.15.0.0
    , exceptions
    , safe-money
    , symbols

  hs-source-dirs:   src
  default-language: Haskell2010

executable hs-dddf
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base     ^>=4.15.0.0
    , hs-dddf

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , deepseq
    , hs-dddf
    , tasty
    , tasty-hunit
    , tasty-quickcheck
